--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -59,7 +59,7 @@
 <script src="src/import-map.10c47.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.f2892.js').catch(function(err) { console.error(err); })
+    System.import('./index.99b68.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
