--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -1,66 +1,80 @@
+<!--
+ * @Date: 2023-08-05 19:30:25
+ * @LastEditors: zhaozhenguo zhaozhenguo@tuyoogame.com
+ * @LastEditTime: 2023-08-05 19:32:12
+-->
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>Cocos Creator | mine</title>
+    <title>Cocos Creator | mine</title>
 
-  <!--http://www.html5rocks.com/en/mobile/mobifying/-->
-  <meta name="viewport"
-        content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true"/>
+    <!--http://www.html5rocks.com/en/mobile/mobifying/-->
+    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1,minimal-ui=true" />
 
-  <!--https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="format-detection" content="telephone=no">
+    <!--https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=no">
 
-  <!-- force webkit on 360 -->
-  <meta name="renderer" content="webkit"/>
-  <meta name="force-rendering" content="webkit"/>
-  <!-- force edge on IE -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-  <meta name="msapplication-tap-highlight" content="no">
+    <!-- force webkit on 360 -->
+    <meta name="renderer" content="webkit" />
+    <meta name="force-rendering" content="webkit" />
+    <!-- force edge on IE -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="msapplication-tap-highlight" content="no">
 
-  <!-- force full screen on some browser -->
-  <meta name="full-screen" content="yes"/>
-  <meta name="x5-fullscreen" content="true"/>
-  <meta name="360-fullscreen" content="true"/>
+    <!-- force full screen on some browser -->
+    <meta name="full-screen" content="yes" />
+    <meta name="x5-fullscreen" content="true" />
+    <meta name="360-fullscreen" content="true" />
 
-  <!--fix fireball/issues/3568 -->
-  <!--<meta name="browsermode" content="application">-->
-  <meta name="x5-page-mode" content="app">
+    <!--fix fireball/issues/3568 -->
+    <!--<meta name="browsermode" content="application">-->
+    <meta name="x5-page-mode" content="app">
 
-  <!--<link rel="apple-touch-icon" href=".png" />-->
-  <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
+    <!--<link rel="apple-touch-icon" href=".png" />-->
+    <!--<link rel="apple-touch-icon-precomposed" href=".png" />-->
 
-  <link rel="stylesheet" type="text/css" href="style.02f4a.css"/>
+    <link rel="stylesheet" type="text/css" href="style.02f4a.css" />
 
 </head>
+
 <body>
-  <div id="GameDiv" cc_exact_fit_screen="true">
-      <div id="Cocos3dGameContainer">
-        <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="99"></canvas>
-      </div>
+    <div id="GameDiv" cc_exact_fit_screen="true">
+        <div id="Cocos3dGameContainer">
+            <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="99"></canvas>
+        </div>
     </div>
-  
-<script src="./vconsole.min.9e84b.js"></script>
-<script type="text/javascript">
-    // open web debugger console
-    window.VConsole && (window.vConsole = new VConsole());
-</script>
 
-<!-- Polyfills bundle. -->
-<script src="src/polyfills.bundle.5adbf.js" charset="utf-8"> </script>
+    <script src="./vconsole.min.9e84b.js"></script>
+    <script type="text/javascript">
+        // open web debugger console
+        window.VConsole && (window.vConsole = new VConsole());
+        window.fromFlutterMessage = (event) => {
+            console.warn("window on message index.html ", JSON.stringify(event));
+        };
+    </script>
 
-<!-- SystemJS support. -->
-<script src="src/system.bundle.36d3c.js" charset="utf-8"> </script>
+    <!-- Polyfills bundle. -->
+    <script src="src/polyfills.bundle.5adbf.js" charset="utf-8">
+    </script>
 
-<!-- Import map -->
-<script src="src/import-map.10c47.json" type="systemjs-importmap" charset="utf-8"> </script>
+    <!-- SystemJS support. -->
+    <script src="src/system.bundle.36d3c.js" charset="utf-8">
+    </script>
 
-<script>
-    System.import('./index.74a8c.js').catch(function(err) { console.error(err); })
-</script>
+    <!-- Import map -->
+    <script src="src/import-map.10c47.json" type="systemjs-importmap" charset="utf-8"> </script>
+
+    <script>
+        System.import('./index.74a8c.js').catch(function(err) {
+            console.error(err);
+        })
+    </script>
 
 </body>
+
 </html>
