自动发布版本 3

--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -65,7 +65,7 @@
 <script src="src/import-map.10c47.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.84d7c.js').catch(function(err) { console.error(err); })
+    System.import('./index.b9daa.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
