自动发布版本 5

--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -43,12 +43,6 @@
       };
     </script>
 
-	<script type="text/javascript">
-      window.fromFlutterMessage = (event) => {
-        console.warn("window on message index.html ", JSON.stringify(event));
-      };
-    </script>
-
   <div id="GameDiv" cc_exact_fit_screen="true">
       <div id="Cocos3dGameContainer">
         <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="99"></canvas>
@@ -71,7 +65,7 @@
 <script src="src/import-map.10c47.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.b9daa.js').catch(function(err) { console.error(err); })
+    System.import('./index.8e1ec.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
