自动发布版本 10

--- a/web-mobile/index.html
+++ b/web-mobile/index.html
@@ -59,7 +59,7 @@
 <script type="systemjs-importmap" charset="utf-8">{"imports":{"cc":"./cocos-js/cc.fa41e.js"}}</script>
 
 <script>
-    System.import('./index.00239.js').catch(function(err) { console.error(err); })
+    System.import('./index.d4bd3.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
